[package]
name = "rxrust-with-wasm"
version = "0.1.0"
authors = ["Chris Ohk <utilForever@gmail.com>"]
edition = "2018"
description = "A Rust-based simple example using rxrust and wasm-bindgen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
rxrust = { path = "rxrust", features = ["wasm-scheduler"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
